--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ irc = "0.15.0"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
 futures = "0.3.0"
 failure = "0.1.8"
+reqwest = "0.12.5"
