--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net
 futures = "0.3.0"
 failure = "0.1.8"
 reqwest = "0.12.5"
+serde_bencode = "^0.2.4"
+serde = "^1.0.0"
+serde_derive = "^1.0.0"
