--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,10 @@ log = "0.4.22"
 env_logger = "0.11.3"
 regex = "1.10.5"
 confy = "0.6.1"
+
+[profile.release]
+opt-level = 'z'
+lto = true
+codegen-units = 1
+panic = 'abort'
+strip = true
